--- a/src/main/resources/templates/signup_form.html
+++ b/src/main/resources/templates/signup_form.html
@@ -5,7 +5,7 @@
             <h4>회원가입</h4>
         </div>
     </div>
-    <form action="@{/user/signup}" th:object="${userVreateForm}" method="post">
+    <form th:action="@{/user/signup}" th:object="${userCreateForm}" method="post">
         <div th:replace="~{form_error :: formErrorsFragment}"></div>
         <div class="mb-3">
             <label for="username" class="form-label">사용자 ID</label>
